<?xml version="1.0"?>
<package format="2">
  <name>imu_vn_100</name>
  <version>0.0.0</version>
  <description>The imu_vn_100 package</description>

  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <license>Apache 2.0</license>
  <!-- <url type="website">http://wiki.ros.org/imu_vn_100</url> -->
  <author email="sunke.polyu@gmail.com">Ke Sun</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cosmo_ros</depend>
  <depend>mabi_base_msgs</depend>
  <depend>mabi_base_description</depend>
  <depend>mabi_base_description_ros</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
